--- a/ws-eclipse/ex_map/.project
+++ b/ws-eclipse/ex_map/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>ex_set</name>
+	<name>ex_map</name>
 	<comment></comment>
 	<projects>
 	</projects>
